# smallpaintweb

./: .gitignore  Cargo.toml  Trunk.toml  index.html
src/: main.rs  scene_builder.rs
